***********************************************************
**********| Version 2.1.0 - Released 2013-11-21 |**********
***********************************************************
 * allow differing billing and shipping addresses
 * send customer name and company (if necessary) within shipping address

***********************************************************
**********| Version 2.0.9 - Released 2013-11-20 |**********
***********************************************************
 * remove bundle article from requests and send only the bundled items
 * fix guest checkout elv data saving problem


***********************************************************
**********| Version 2.0.8 - Released 2013-05-23 |**********
***********************************************************
 * fix wrong payment fee behavior after second selection of 
   RatePAY 

***********************************************************
**********| Version 2.0.7 - Released 2012-09-04 |**********
***********************************************************
 * fix payment fee
 * fix wrong email in creditmemo footer

***********************************************************
**********| Version 2.0.6 - Released 2012-03-05 |**********
***********************************************************
 * fix different behavior for article bundles

***********************************************************
**********| Version 2.0.5 - Released 2012-02-15 |**********
***********************************************************
 * fix wrong path for the rp footer image in the invoice
 * set the _canAuthorize Payment property to "false"
 * fix partial return bug

***********************************************************
**********| Version 2.0.4 - Released 2012-11-07 |**********
***********************************************************
 * changed default Theme to base Theme
 * fixed encryption constant Bug
 * fixed a bug, where you couldn't hide payment methods
