@@ -34,7 +34,7 @@
                     <fields>
 
                         <version translate="label">
-                            <label>v2.1.0</label>
+                            <label>v2.1.1</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
@@ -207,7 +207,7 @@
                     <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
                     <fields>
                         <version translate="label">
-                            <label>v2.1.0</label>
+                            <label>v2.1.1</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
@@ -400,7 +400,7 @@
                     <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
                     <fields>
                         <version translate="label">
-                            <label>v2.1.0</label>
+                            <label>v2.1.1</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>-1</sort_order>
