@@ -1,4 +1,10 @@
 ***********************************************************
+**********| Version 2.1.1 - Released 2014-01-xx |**********
+***********************************************************
+ * better bundle handling
+
+
+***********************************************************
 **********| Version 2.1.0 - Released 2013-11-21 |**********
 ***********************************************************
  * allow differing billing and shipping addresses
